[tool.poetry]
name = "Optimization-performance"
version = "0.1.0"
description = "The repository content the code to reproduce charts of the paper"
authors = ["Ruslan Shaiakhmetov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch-optimizer = "^0.3.0"
numpy = "^2.0.0"
torch = "^2.3.1"
hyperopt = "^0.2.7"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
mpl-tools = "^0.4.0"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
